1.1.0
  Added zlib_Uncompress.php to handle decompressing data file_put_contents
  *Changed GetSectorData to handle the new data structure
  *Changed GetSectorData to handle the new data structure

  *WARNING: Compatible with avorion build 0.12 r8487

1.0.10
  Added Groups detection into GetPlayerData script (parses admin.xml for players groups)
  Added Debian support for ApacheInstaller script.
  Fixed Maps scrolling issues.
  Added modal confirmation to password change.
  Added /run detection to console input.
  Added Chat Input to home page chat log.
  Added manager-config.ini parsing to CommonController, making it so we dont have to grep for commenly used options like Galaxy Name
  fixed error when starting server for first time and there is no console.log present.

1.0.9
  Added Apache web server support
  changed Router.php to index.php
  Changed PHPPort to WEBPORT in manager-config.ini
  Added '&' charecter escaping in UpdateManager
  Updated manager to use unique tmux identifier
  Added Memory Usage graph

1.0.8
  Added Last Seen support for players, GetPlayerData will track the last time it saw the player in the console
  Changed SendMail script so that the console sendmail form can now send long messages (previously not possible due to max characters in commands)
  Updated/fixed failed GetPlayerData.sh and GetSectorData.sh
  Fixed send mail sending wrong resource when not filling in all the resources in the form
  Added "version" command to manager

1.0.7
  Fixed wrong number of online players on home page.
  Added Space Invaders page, because why not?
  Updated Definitions for PHPConfig.ini
  Moved Resources files to individual directories (Youll need to manually delete the exsisting files)
  fixed bottom padding of #Main
  Changed Font styles
  Added % to cpu/serverload Graphs

1.0.6
  Added Support for configuration updates

1.0.5
  Added sendmail.lua to handle mail form.

1.0.4
  adjusted session requirments for console  and config page.

1.0.3