@@ -208,6 +208,10 @@ class ViewController extends CommonController
       array('name' => 'CollisionDamage',
             'Definition' => 'amount of damage done to an object on collision, from 0 to 1. 0: no damage, 1: full damage. default: 1',
             'Type' => 'input'),
+      array('name' => 'SafePlayerInput ',
+            'Definition' => 'Unkown',
+            'Type' => 'select',
+            'Values' => array('True'=>'true','False'=>'false')),
       array('name' => 'BigWreckageDespawnTime',
             'Definition' => 'Time for wrecks with 10 or more blocks to despawn.',
             'Type' => 'input'),
@@ -266,12 +270,11 @@ class ViewController extends CommonController
       array('name' => 'generatorThreads',
             'Definition' => 'Number of threads handling sector generation. ie When calculating a jump or in a sector with wormholes/gates. (These are temporary/unlimited and run at full load to perform computations quickly.)',
             'Type' => 'input'),
+      array('name' => 'aliveSectorsPerPlayer',
+            'Definition' => 'Number of sectors for each player to keep alive, based on a ranking system.(the more ships/stations of yours, the higher the priority)',
+            'Type' => 'input'),
       array('name' => 'weakUpdate',
             'Definition' => 'When enabled sectors that have no players are updated in a more lightweight and simplified way, without huge physics calculations, which saves performance.',
-            'Type' => 'select',
-            'Values' => array('True'=>'true','False'=>'false')),
-      array('name' => 'immediateWriteout',
-            'Definition' => 'immediately writes data to the players .dat file, disabling will save on performance. (Unkown interval when disabled)',
             'Type' => 'select',
             'Values' => array('True'=>'true','False'=>'false')),
       array('name' => 'profiling',
