@@ -2,6 +2,7 @@
   Added zlib_Uncompress.php to handle decompressing data file_put_contents
   *Changed GetSectorData to handle the new data structure
   *Changed GetSectorData to handle the new data structure
+  *Changed server.ini configuration deffinitions
 
   *WARNING: Compatible with avorion build 0.12 r8487
 
